# luxury

./: README.md  pubspec.yaml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/luxury/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
lib/data/: hive_database.dart
lib/models/: file.dart  file_data.dart  models.dart
lib/providers/: login_form_provider.dart
lib/router/: routes.dart
lib/screens/: check_auth_screen.dart  editing_file_screen.dart  file_screen.dart  home_screen.dart  login_screen.dart  register_screen.dart  screen.dart
lib/services/: auth_service.dart  notifications_service.dart  services.dart
lib/theme/: theme.dart
lib/ui/: input_decorations.dart
lib/widgets/: auth_background.dart  card_container.dart  custom_button.dart  custom_input_field.dart  widgets.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
