[package]
name = "rust"
version = "1.77.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
iota-client = { version = "2.0.1-rc.7", default-features = false, features = [ "tls" ] }

tokio = { version = "1.34.0", features = ["full"] }
anyhow = { version = "1.0.75" }

[lib]
crate-type = ["staticlib", "cdylib"]
